WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183856
btjs should print the bytecode offset in the stack trace for JS frames
https://bugs.webkit.org/show_bug.cgi?id=183856
Summary
btjs should print the bytecode offset in the stack trace for JS frames
Keith Miller
Reported
2018-03-21 09:34:25 PDT
btjs should print the bytecode offset in the stack trace for JS frames
Attachments
Patch
(1.76 KB, patch)
2018-03-21 10:36 PDT
,
Keith Miller
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2018-03-21 10:36:31 PDT
Created
attachment 336209
[details]
Patch
Keith Miller
Comment 2
2018-03-21 10:38:44 PDT
Committed
r229810
: <
https://trac.webkit.org/changeset/229810
>
Radar WebKit Bug Importer
Comment 3
2018-03-21 10:39:22 PDT
<
rdar://problem/38713576
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug