btjs should print the bytecode offset in the stack trace for JS frames https://bugs.webkit.org/show_bug.cgi?id=183856

Reviewed by Filip Pizlo.

* interpreter/CallFrame.cpp:
(JSC::CallFrame::bytecodeOffset):
(JSC::CallFrame::dump):

Canonical link: https://commits.webkit.org/199454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229810 268f45cc-cd09-0410-ab3c-d52691b4dbfc